--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "4.16.2"
+    "express": "4.16.2",
+    "mongodb": "^3.3.1",
+    "mongoose": "^5.6.11"
   },
   "devDependencies": {
+    "env-cmd": "^9.0.3",
     "mocha": "5.0.0",
-    "unit.js": "2.0.0",
-    "supertest": "3.0.0"
+    "supertest": "3.0.0",
+    "unit.js": "2.0.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node ./server/app.js",
     "test": "mocha --recursive tests --exit"
   }
 }
