--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
- node_modules/
- .idea/
- config/
+node_modules/
+.idea/
+config/
+
+# Client
+client/public/bundle.js
+client/public/bundle.js.map
+client/node_modules/
