--- a/package.json
+++ b/package.json
@@ -4,14 +4,25 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "4.16.2",
-    "mongodb": "^3.3.1",
-    "mongoose": "^5.6.11"
+    "@sendgrid/mail": "^6.4.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.2.4",
+    "mongoose": "^5.5.8",
+    "multer": "^1.4.1",
+    "sharp": "^0.22.1",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
-    "env-cmd": "^9.0.3",
+    "@types/jest": "^24.0.13",
+    "@types/node": "^12.0.1",
+    "env-cmd": "^9.0.1",
+    "jest": "^24.8.0",
+    "nodemon": "^1.19.0",
+    "supertest": "^4.0.2",
     "mocha": "5.0.0",
-    "supertest": "3.0.0",
     "unit.js": "2.0.0"
   },
   "scripts": {
